# A-G-I_RFP

./: .env.example  .gitignore  LICENSE  MANUAL_INTEGRATION.md  OCR_SETUP.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
examples/: generate_rfp_response.py
src/: config.py
src/agents/: README.md  rfp_agent.py  specialized_agents.py
src/data/: document_processor.py  document_processor_ocr.py  fetch_sam_data.py  ingest_documents.py
src/tools/: rfp_tools.py
src/vectordb/: vector_store.py
