[project]
name = "agi-rfp"
version = "0.1.0"
description = "AI-powered RFP response generation using LangGraph deepagents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ADITHYAG73" }
]
keywords = ["rfp", "ai", "langgraph", "deepagents", "proposal", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core AI/ML frameworks
    "langgraph>=0.3.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "deepagents>=0.2.0",

    # Vector databases
    "chromadb>=0.5.0",
    "sentence-transformers>=2.2.0",

    # Document processing
    "pypdf>=5.0.0",
    "python-docx>=1.0.0",
    "textract>=1.6.5",
    "python-magic>=0.4.27",

    # API and web
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",

    # Utilities
    "tqdm>=4.66.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
ocr = [
    # OCR support for scanned PDFs
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.0",
    "Pillow>=10.0.0",
]

dev = [
    # Development tools
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

all = [
    # Install everything
    "agi-rfp[ocr,dev]",
]

[project.urls]
Homepage = "https://github.com/ADITHYAG73/A-G-I_RFP"
Repository = "https://github.com/ADITHYAG73/A-G-I_RFP"
Issues = "https://github.com/ADITHYAG73/A-G-I_RFP/issues"

[project.scripts]
agi-rfp = "src.agents.rfp_agent:main"
agi-rfp-ingest = "src.data.ingest_documents:main"
agi-rfp-fetch = "src.data.fetch_sam_data:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hatch
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
